# simple_etl_pipeline_spotify

./: LICENSE  README.md  pyproject.toml
src/simple_etl_job_files/: definitions.py
src/simple_etl_job_files/data/: spotify_data.csv  spotify_data.parquet
src/simple_etl_job_files/defs/: asset.py
